2004-01-05  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Concatenate most regression tests into single executable file.

2004-01-05  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* generate.adb:
	Remove DOS style CR at the end of line.

2004-01-02  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* generate.adb:
	Get test list from command line.

2003-12-31  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* strm.adb, strm.out:
	Add non keep-alive tests.

2003-12-24  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Move embedded resources build for zres, file2 and eres to the init
	 section.

2003-12-23  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* dummy.adb, dummy.out, zstrm2.adb, zstrm2.out:
	Add dummy output.

	* generate.adb:
	Generator for the fast test executor.

2003-12-22  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* eres.adb, eres.out, makefile:
	Test for AWS.Resources.Exist routine.

2003-12-19  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* tmem.adb:
	Test new Constant_Access type and Trim parameter.

2003-12-18  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zres.adb, zres.out:
	Add test getting compressed disk files.

	* file2.adb, file2.out:
	New test for gzipped files transfer.

	* tmem.adb, tmem.out:
	Test generic memory stream interface.

	* makefile:
	Include tmem and file2 tests.
	Add file2 from zres dependence, file2 use the same embedded
	 resources.

2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD_SEC): Add new test cert.

	* client.pem:
	Initial revision.

	* cert.adb, cert.out:
	Initial revision.

2003-12-12  Pascal Obry  <p.obry@wanadoo.fr>

	* timer.adb:
	Properly update the current time variable in the loop to avoid
	 infinite loop.

2003-12-10  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Add timer.

	* timer.adb, timer.out:
	Initial revision.

2003-12-08  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(init): Redirect output of gzip to /dev/null.

2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>

	* check_mem.adb: